[project]
name = "python-rpg"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "c0b221768c", email = "c0b221768c@edu.teu.ac.jp" }
]
dependencies = [
    "click>=8.1.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []
dev-dependencies = [
    "black>=23.7.0",
    "flake8>=5.0.4",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "pyproject-flake8>=5.0.4.post1",
]

[tool.hatch.metadata]
allow-direct-references = true

# Detailed settings for each formatter and linter below
[tool.black]
# max-line-length = 120
line-length = 120

[tool.flake8]
max-line-length = 120
# ignore list
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"

[tool.mypy]
show_error_contenxt = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redudant_casts = true